プラグイン名、テーブル名のリファクタリング

--- a/Test/selenium/config.html
+++ b/Test/selenium/config.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="https://flickpass.net.localdomain/" />
+<link rel="selenium.base" href="http://localhost/ninton-tools/shuffle_sim/shuffle_sims/" />
 <title>config</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>store</td>
-	<td>http://localhost/ninton-tools/shuffle_navi/sims/</td>
+	<td>http://localhost/ninton-tools/shuffle_sim/shuffle_sims/</td>
 	<td>BASE_URL</td>
 </tr>
 <tr>
@@ -21,7 +21,6 @@
 	<td>10000</td>
 	<td>TRIAL_NUM</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
