--- a/Test/selenium/testcase/cut_1.html
+++ b/Test/selenium/testcase/cut_1.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="https://flickpass.net.localdomain/" />
+<link rel="selenium.base" href="http://localhost/ninton-tools/shuffle_sim/shuffle_sims/" />
 <title>cut_1</title>
 </head>
 <body>
@@ -19,17 +19,17 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=SimTrialNum</td>
+	<td>id=ShuffleSimTrialNum</td>
 	<td>1</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=SimMinPos</td>
+	<td>id=ShuffleSimMinPos</td>
 	<td>0</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=SimMaxPos</td>
+	<td>id=ShuffleSimMaxPos</td>
 	<td>0</td>
 </tr>
 <tr>
@@ -45,17 +45,17 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=SimTrialNum</td>
+	<td>id=ShuffleSimTrialNum</td>
 	<td>1</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=SimMinPos</td>
+	<td>id=ShuffleSimMinPos</td>
 	<td>0</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=SimMaxPos</td>
+	<td>id=ShuffleSimMaxPos</td>
 	<td>0</td>
 </tr>
 <tr>
