--- a/Test/selenium/testcase/mix.html
+++ b/Test/selenium/testcase/mix.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="https://flickpass.net.localdomain/" />
+<link rel="selenium.base" href="http://localhost/ninton-tools/shuffle_sim/shuffle_sims/" />
 <title>mix</title>
 </head>
 <body>
@@ -19,12 +19,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=SimTrialNum</td>
+	<td>id=ShuffleSimTrialNum</td>
 	<td>${TRIAL_NUM}</td>
 </tr>
 <tr>
 	<td>select</td>
-	<td>id=SimShuffleName</td>
+	<td>id=ShuffleSimShuffleName</td>
 	<td>label=cut + random_deal + cut</td>
 </tr>
 <tr>
@@ -40,12 +40,12 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=SimTrialNum</td>
+	<td>id=ShuffleSimTrialNum</td>
 	<td>${TRIAL_NUM}</td>
 </tr>
 <tr>
 	<td>select</td>
-	<td>id=SimShuffleName</td>
+	<td>id=ShuffleSimShuffleName</td>
 	<td>label=cut + hindu(8,12,5) + cut</td>
 </tr>
 <tr>
