--- a/Test/selenium/testcase/mix.html
+++ b/Test/selenium/testcase/mix.html
@@ -46,14 +46,13 @@
 <tr>
 	<td>select</td>
 	<td>id=ShuffleSimShuffleName</td>
-	<td>label=cut + hindu(8,12,5) + cut</td>
+	<td>label=cut + hindu + cut</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>css=input[type=&quot;submit&quot;]</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
